--- a/autres/ticket.html
+++ b/autres/ticket.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="../index.html">ACCUEIL</a></li>
         <li><a href="../autres/ticket.html">TICKET</a></li>
-        <li><a href="../autres/programmation.html">PROGRAMMATION</a></li>
+        <li><a href="lineup.html">PROGRAMMATION</a></li>
         <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
         <li><a href="../autres/infos.html">INFOS</a></li>
       </ul>
@@ -34,7 +34,7 @@
 <br>
 
 <footer>
-  <p>Copyright &copy; 2025 — Tous droits réservés.</p>
+  <p>Copyright &copy; 2025 — All rights reserved.</p>
   <p>Designed by
     <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
     <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
