--- a/autres/infos.html
+++ b/autres/infos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,55 +10,84 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
   <script src="../assets/nav.js" defer></script>
+
 </head>
+
 <body>
-<!-- ========== header ============ -->
-<div class="navbar">
-  <div class="menu-container">
-    <div class="nav-links">
-      <ul>
-        <li><a href="../index.html">ACCUEIL</a></li>
-        <li><a href="../autres/ticket.html">TICKET</a></li>
-        <li><a href="lineup.html">PROGRAMMATION</a></li>
-        <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
-        <li><a href="../autres/infos.html">INFOS</a></li>
-      </ul>
+<!-- ============ header ========== -->
+<header>
+  <div class="navbar">
+    <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
+    <div class="menu-container">
+      <div class="nav-links mb-5">
+        <ul>
+          <li><a href="../index.html">ACCUEIL</a></li>
+          <li><a href="../autres/ticket.html">TICKETS</a></li>
+          <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
+          <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+          <li><a href="../autres/infos.html">INFOS</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-  <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
-</div>
+  </div> </header>
+
 <!-- ========== fin header ========== -->
-<!-- ========== MAIN ========== -->
-<div class="us">
-  <h1>QUI SOMMES NOUS ?</h1>
-  <h2></h2>
-</div>
-<main class="main-info">
+<!-- ========== main ========== -->
 
-  <section class="team">
-    <div class="team-member">
-      <img src="../assets/img/chahe.papazian.jpg" alt="Chahé Papazian">
-      <p>Chahé Papazian</p>
-    </div>
+<main>
+  <div class="container">
+    <h1 class="mt-5"> INFORMATIONS</h1>
 
-    <div class="team-member">
-      <img src="../assets/img/julien.brouillac.jpg" alt="Julien Brouillac">
-      <p>Julien Brouillac</p>
-    </div>
+    <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
+      <div class="nous nous col m-3">
+        <a href="./star/1plike140.html"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
+          <p>Julien BROUILLAC</p></a>
+      </div>
 
-    <div class="team-member">
-      <img src="../assets/img/maxime.madureira.jpg" alt="maxime madureira">
-      <p>Maxime Madureira</p>
-    </div>
+      <div class="nous col  m-3">
+        <a href="./star/1plike140.html"><img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-5 border-2 ">
+          <p>Maxime MADUREIRA</p></a>
+      </div>
 
-    <div class="team-member">
-      <img src="../assets/img/timéo.gif" alt="timeo laubignat">
-      <p>Timeo Laubignat</p>
+      <div class="nous col m-3 ">
+        <a href="./star/1plike140.html"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
+          <p>Chahé PAPAZIAN</p></a>
+      </div>
+
+      <div class="nous  col m-3">
+        <a href="./star/1plike140.html"><img src="../assets/img/timéo.gif" alt="timeo" class="rounded-5 border-2 ">
+          <p>Timéo LAUBIGNAT</p></a>
+      </div>
     </div>
-  </section>
+    <br>
+    <br>
+    <div class=" bg-black text-white rounded-5 p-5 ">
+      <h1 class="m-5"> Our engagements</h1>
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam,
+        nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea
+        est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate!
+        aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum!</p>
+      <br>
+      <br>
+      <br>
+
+      <h1 class="m-5"> DONATE NOW !</h1>
+      <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ms-4 me-4 ">
+        <a href="#"><div class="col border rounded-5 m-3 p-2"> free paslestine</div></a>
+        <a href="#"><div class="prog-btn col border rounded-5 m-3 p-2  ">free paslestine </div> </a>
+        <a href="#"><div class="prog-btn col border rounded-5 m-3 p-2">free paslestine </div> </a>
+        <a href="#"><div class="prog-btn col border rounded-5 m-3 p-2">free paslestine</div></a>
+      </div>
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
+              width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
 </main>
-<!-- ========== fin MAIN ========== -->
-<!-- ========== Footer ========== -->
+<!-- ========== fin main ========== -->
+<!-- ========== footer ========== -->
+
 <footer>
   <p>Copyright &copy; 2025 — All rights reserved.</p>
   <p>Designed by
@@ -68,6 +97,9 @@
     <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
   </p>
 </footer>
-<!-- ========== Fin Footer ========== -->
+<!-- ========== fin footer ========== -->
+
+
+
 </body>
 </html>
