--- a/autres/star/1plike140.html
+++ b/autres/star/1plike140.html
@@ -10,7 +10,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../../assets/style.css">
   <script src="../../assets/nav.js" defer></script>
-
 </head>
 
 <body>
@@ -33,12 +32,13 @@
 </header>
 <!-- ========== fin header ========== -->
 <main>
-    <div class="prog container mb-5 ">
-        <a href="../lineup.html"><div class="col border rounded-5 m-3 p-2">back </div></a>
+    <div class="prog container mb-5 w-75">
+        <a href="../lineup.html"><div class="col border rounded-5 m-3 p-2 ">back </div></a>
+      <br>
+      <br>
         <h1 class="mt-5"> 1PLIKE140 PRIME</h1>
     </div>
-
-
+      <br>
     <div class="row  row-cols-1 row-cols-md-3 row-cols-lg-3 d-flex justify-content-center mt-5">
       <div class=" me-5 ms-5">
         <img src="../../assets/img/1plike140.jpg" alt="1plike140" class="star rounded-circle"> </div>
@@ -49,6 +49,9 @@
           molestiae nobis omnis pariatur
           quia repellendus sed, temporibus, voluptas? Incidunt neque numquam sint veritatis voluptates!</p>
     </div>
+
+  <br>
+  <br>
     <div class="container mt-5">
       <h2>SCHEDULE</h2>
     </div>
