--- a/autres/infos.html
+++ b/autres/infos.html
@@ -61,29 +61,31 @@
     </div>
     <br>
     <br>
-    <div class=" bg-black text-white rounded-5 p-5 ">
-      <h1 class="m-5"> Our engagements</h1>
+    <div class=" bg-black text-white rounded-5 ">
+      <div class="bg-white text-black p-5">
+      <h1 class="m-5"> OUR ENGAGEMENTS</h1>
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam,
         nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur
         adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea
         est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate!
         aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum!</p>
-      <br>
-      <br>
-      <br>
-
-      <h1 class="m-5"> DONATE NOW !</h1>
-      <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ms-4 me-4 ">
-        <a href="#"><div class="col border rounded-5 m-3 p-2"> free paslestine</div></a>
-        <a href="#"><div class="prog-btn col border rounded-5 m-3 p-2  ">free paslestine </div> </a>
-        <a href="#"><div class="prog-btn col border rounded-5 m-3 p-2">free paslestine </div> </a>
-        <a href="#"><div class="prog-btn col border rounded-5 m-3 p-2">free paslestine</div></a>
       </div>
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
-              width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
+      <div class="prog container p-5">
+          <h1 class="m-5"> FREE PALESTINE !</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
+          <br>
+        <div class="prog container w-75"> <a href="../lineup.html"><div class="col border rounded-5 m-3 p-2 ">Donate now </div></a>
+          </div>
+      </div>
+      <br>
+      <div class="bg-white text-black p-5 ">
+          <h1 class="m-5 "> WHERE FIND US ?</h1>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
+          <br>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
+                  width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
 </main>
 <!-- ========== fin main ========== -->
 <!-- ========== footer ========== -->
@@ -98,8 +100,5 @@
   </p>
 </footer>
 <!-- ========== fin footer ========== -->
-
-
-
 </body>
 </html>
