--- a/autres/infos.html
+++ b/autres/infos.html
@@ -40,22 +40,22 @@
 
     <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
       <div class="nous nous col m-3">
-        <a href="./star/1plike140.html"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
+        <a href="https://www.linkedin.com/in/brouillac/"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
           <p>Julien BROUILLAC</p></a>
       </div>
 
       <div class="nous col  m-3">
-        <a href="./star/1plike140.html"><img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-5 border-2 ">
+        <a href="https://www.linkedin.com/in/maxime-madureira/"><img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-5 border-2 ">
           <p>Maxime MADUREIRA</p></a>
       </div>
 
       <div class="nous col m-3 ">
-        <a href="./star/1plike140.html"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
+        <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
           <p>Chahé PAPAZIAN</p></a>
       </div>
 
       <div class="nous  col m-3">
-        <a href="./star/1plike140.html"><img src="../assets/img/timéo.gif" alt="timeo" class="rounded-5 border-2 ">
+        <a href="https://www.linkedin.com/in/timeo-laubignat/"><img src="../assets/img/timéo.gif" alt="timeo" class="rounded-5 border-2 ">
           <p>Timéo LAUBIGNAT</p></a>
       </div>
     </div>
