--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -1,259 +1,249 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Programmation</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../assets/style.css">
-    <script src="../assets/nav.js" defer></script>
-
+<meta charset="UTF-8">
+<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Programmation</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="../assets/style.css">
+<script src="../assets/nav.js" defer></script>
 </head>
 
 <body>
 <!-- ============ header ========== -->
-<header>
-     <div class="navbar">
-        <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
-        <div class="menu-container">
-            <div class="nav-links mb-5">
-                <ul>
-                    <li><a href="../index.html">ACCUEIL</a></li>
-                    <li><a href="../autres/ticket.html">TICKETS</a></li>
-                    <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-                    <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
-                    <li><a href="../autres/infos.html">INFOS</a></li>
-                </ul>
+    <header>
+         <div class="navbar">
+            <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
+            <div class="menu-container">
+                <div class="nav-links mb-5">
+                    <ul>
+                        <li><a href="../index.html">ACCUEIL</a></li>
+                        <li><a href="../autres/ticket.html">TICKETS</a></li>
+                        <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
+                        <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+                        <li><a href="../autres/infos.html">INFOS</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div> </header>
+    </header>
 
-<!-- ========== fin header ========== -->
-<!-- ========== main ========== -->
+    <!-- ========== fin header ========== -->
+    <!-- ========== main ========== -->
 
-<main>
-    <div class="container">
-        <h1 class="mt-5"> ALL LINE-UP</h1>
+    <main>
+        <div class="container">
+            <h1 class="mt-5"> ALL LINE-UP</h1>
+            <br>
+            <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ms-4 me-4 ">
+                <a href="lineup.html"><div class="col border rounded-5 m-3 p-2">All </div></a>
+                <a href="../autres/friday.html"><div class="prog-btn col border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
+                <a href="../autres/saturday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
+                <a href="../autres/sunday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Sunday 3rd </div></a>
+            </div>
+            <br>
+            <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
+                <div class="col m-3">
+                    <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
+                    <p>1plike Prime</p></a>
+                </div>
+
+                <div class="col  m-3">
+                    <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
+                    <p>El Barto</p></a>
+                </div>
+
+                <div class="col m-3 ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
+                    <p>Mr. Léonide</p></a>
+                </div>
+
+                <div class="col m-3 ">
+                    <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
+                    <p>Julien Naty</p></a>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
+                    <p>Gattouz</p>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/pims.jpg" alt="pims" class="rounded-circle border-2 ">
+                    <p>Maitre Pim's</p>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/pnl.jpg" alt="pnl" class="rounded-circle border-2 ">
+                    <p>PNL</p>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
+                    <p>Asap Rocky</p>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
+                    <p>El Dictator</p>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
+                    <p>Killer Bee</p>
+                </div>
+
+                <div class="col m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
+                    <p>El Dictator</p>
+                </div>
+
+                <div class="col m-3">
+                    <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
+                    <p>Asap Rocky</p>
+                </div>
+
+                <div class="col m-3">
+                    <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
+                    <p>Asap Rocky</p>
+                </div>
+
+                <div class="col m-3">
+                    <img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
+                    <p>El Dictator</p>
+                </div>
+
+                <div class="col m-3">
+                    <img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
+                    <p>Killer Bee</p>
+                </div>
+            </div>
+        </div>
         <br>
-        <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ms-4 me-4 ">
-            <a href="lineup.html"><div class="col border rounded-5 m-3 p-2">All </div></a>
-            <a href="../autres/friday.html"><div class="prog-btn col border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
-            <a href="../autres/saturday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
-            <a href="../autres/sunday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Sunday 3rd </div></a>
-        </div>
         <br>
-
-        <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
-              <div class="col m-3">
-                <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
-                <p>1plike Prime</p></a>
-              </div>
-
-              <div class="col  m-3">
-                  <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
-                      <p>El Barto</p></a>
-              </div>
-
-              <div class="col m-3 ">
-                  <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
-                      <p>Mr. Léonide</p></a>
-              </div>
-
-              <div class="col m-3 ">
-                  <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
-                      <p>Julien Naty</p></a>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
-                <p>Gattouz</p>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/pims.jpg" alt="pims" class="rounded-circle border-2 ">
-                <p>Maitre Pim's</p>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/pnl.jpg" alt="pnl" class="rounded-circle border-2 ">
-                <p>PNL</p>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                <p>Asap Rocky</p>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
-                <p>El Dictator</p>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
-                <p>Killer Bee</p>
-              </div>
-
-              <div class="col m-3">
-                <img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
-                <p>El Dictator</p>
-              </div>
-
-            <div class="col m-3">
-                <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                <p>Asap Rocky</p>
+        <div class="container container-fluid bg-danger vh-100">
+            <div class="container pb-5">
+                <h1>SCHEDULE</h1>
             </div>
 
-            <div class="col m-3">
-                <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
-                <p>Asap Rocky</p>
-            </div>
-
-            <div class="col m-3">
-                <img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
-                <p>El Dictator</p>
-            </div>
-
-            <div class="col m-3">
-                <img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
-                <p>Killer Bee</p>
+            <div class="container">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th>TIME</th>
+                            <th>FRIDAY 1</th>
+                            <th>SATURDAY 2</th>
+                            <th>SUNDAY 3</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr >
+                            <td> 1PM</td>
+                            <td class="table-success"> Open</td>
+                            <td class="table-success"> Open</td>
+                            <td class="table-success"> Open</td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 2PM - 3PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 3PM - 4PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 4PM - 5PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 5PM - 6PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 6PM - 7PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 7PM - 8PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 8PM - 9PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 9PM - 10PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 10PM - 11PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 11PM - 12PM</td>
+                            <td> </td>
+                            <td> </td>
+                            <td> </td>
+                        </tr>
+                    </tbody>
+                    <tbody>
+                        <tr>
+                            <td> 1AM</td>
+                            <td class="table-danger"> Closed</td>
+                            <td class="table-danger"> Closed</td>
+                            <td class="table-danger"> Closed</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
-    </div>
-    <br>
-    <br>
-    <div class="container bg-black rounded-5 p-4">
-    <div class="container mt-5">
-        <h1>SCHEDULE</h1>
-    </div>
-    <div class="container mt-5">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>TIME</th>
-                    <th>FRIDAY 1</th>
-                    <th>SATURDAY 2</th>
-                    <th>SUNDAY 3</th>
-                </tr>
-            </thead>
-            <tbody>
-            <tr >
-                <td> 1PM</td>
-                <td class="table-success"> Open</td>
-                <td class="table-success"> Open</td>
-                <td class="table-success"> Open</td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 2PM - 3PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 3PM - 4PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 4PM - 5PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 5PM - 6PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 6PM - 7PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 7PM - 8PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 8PM - 9PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 9PM - 10PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 10PM - 11PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 11PM - 12PM</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-            </tr>
-            </tbody>
-            <tbody>
-            <tr>
-                <td> 1AM</td>
-                <td class="table-danger"> Closed</td>
-                <td class="table-danger"> Closed</td>
-                <td class="table-danger"> Closed</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    </div>
-</main>
-<!-- ========== fin main ========== -->
-<!-- ========== footer ========== -->
+    </main>
+    <!-- ========== fin main ========== -->
+    <!-- ========== footer ========== -->
 
-<footer>
-    <p>Copyright &copy; 2025 — All rights reserved.</p>
-    <p>Designed by
-        <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
-        <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
-        <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
-        <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
-    </p>
-</footer>
-<!-- ========== fin footer ========== -->
-
-
-
+    <footer>
+        <p>Copyright &copy; 2025 — All rights reserved.</p>
+        <p>Designed by
+            <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
+            <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
+            <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
+            <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
+        </p>
+    </footer>
+    <!-- ========== fin footer ========== -->
 </body>
 </html>
