--- a/autres/infos.html
+++ b/autres/infos.html
@@ -10,95 +10,121 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/style.css">
   <script src="../assets/nav.js" defer></script>
-
 </head>
 
 <body>
-<!-- ============ header ========== -->
-<header>
-  <div class="navbar">
-    <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
-    <div class="menu-container">
-      <div class="nav-links mb-5">
-        <ul>
-          <li><a href="../index.html">ACCUEIL</a></li>
-          <li><a href="../autres/ticket.html">TICKETS</a></li>
-          <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
-          <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
-          <li><a href="../autres/infos.html">INFOS</a></li>
-        </ul>
-      </div>
-    </div>
-  </div> </header>
+    <!-- ============ header ========== -->
+    <header>
+        <div class="navbar">
+            <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
+            <div class="menu-container">
+                <div class="nav-links mb-5">
+                    <ul>
+                        <li><a href="../index.html">ACCUEIL</a></li>
+                        <li><a href="../autres/ticket.html">TICKETS</a></li>
+                        <li><a href="../autres/lineup.html">PROGRAMMATION</a></li>
+                        <li><a href="../autres/benevole.html">BÉNÉVOLE</a></li>
+                        <li><a href="../autres/infos.html">INFOS</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
 
-<!-- ========== fin header ========== -->
-<!-- ========== main ========== -->
+    <!-- ========== fin header ========== -->
+    <!-- ========== main ========== -->
 
-<main>
-  <div class="container">
-    <h1 class="mt-5"> INFORMATIONS</h1>
+    <main class="text-center text-white">
+        <h1 class="mt-5 mb-5 vh-60 vw-100"> INFORMATIONS</h1>
 
-    <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
-      <div class="nous nous col m-3">
-        <a href="https://www.linkedin.com/in/brouillac/"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
-          <p>Julien BROUILLAC</p></a>
-      </div>
+        <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5vh-60  ">
+            <div class="col m-3">
+                <a href="https://www.linkedin.com/in/brouillac/"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
+                  <h2>Julien BROUILLAC</h2>
+                </a>
+            </div>
 
-      <div class="nous col  m-3">
-        <a href="https://www.linkedin.com/in/maxime-madureira/"><img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-5 border-2 ">
-          <p>Maxime MADUREIRA</p></a>
-      </div>
+            <div class="col  m-3">
+                <a href="https://www.linkedin.com/in/maxime-madureira/"><img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-5 border-2 ">
+                <h2>Maxime MADUREIRA</h2>
+                </a>
+            </div>
 
-      <div class="nous col m-3 ">
-        <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
-          <p>Chahé PAPAZIAN</p></a>
-      </div>
+            <div class="col m-3 ">
+                <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
+                <h2>Chahé PAPAZIAN</h2>
+                </a>
+            </div>
 
-      <div class="nous  col m-3">
-        <a href="https://www.linkedin.com/in/timeo-laubignat/"><img src="../assets/img/timéo.gif" alt="timeo" class="rounded-5 border-2 ">
-          <p>Timéo LAUBIGNAT</p></a>
-      </div>
-    </div>
-    <br>
-    <br>
-    <div class=" bg-black text-white rounded-5 ">
-      <div class="bg-white text-black p-5">
-      <h1 class="m-5"> OUR ENGAGEMENTS</h1>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam,
-        nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur
-        adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea
-        est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate!
-        aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum!</p>
-      </div>
+            <div class="col m-3">
+                <a href="https://www.linkedin.com/in/timeo-laubignat/"><img src="../assets/img/timéo.gif" alt="timeo" class="rounded-5 border-2 ">
+                  <h2>Timéo LAUBIGNAT</h2>
+                </a>
+            </div>
+        </div>
 
-      <div class="prog container p-5">
-          <h1 class="m-5"> FREE PALESTINE !</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
-          <br>
-        <div class="prog container w-75"> <a href="../lineup.html"><div class="col border rounded-5 m-3 p-2 ">Donate now </div></a>
-          </div>
-      </div>
-      <br>
-      <div class="bg-white text-black p-5 ">
-          <h1 class="m-5 "> WHERE FIND US ?</h1>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
-          <br>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
-                  width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-</main>
-<!-- ========== fin main ========== -->
-<!-- ========== footer ========== -->
+        <br>
+        <br>
 
-<footer>
-  <p>Copyright &copy; 2025 — All rights reserved.</p>
-  <p>Designed by
-    <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
-    <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
-    <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
-    <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
-  </p>
-</footer>
-<!-- ========== fin footer ========== -->
+        <div class="bg-white text-black p-5 vh-60 vw-100">
+            <h1 class="m-5"> OUR ENGAGEMENTS</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
+        </div>
+
+        <div class="vh-60 vw-100 p-5">
+            <h1 class="m-5"> FREE PALESTINE !</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
+            <br>
+            <div class="prog container w-75">
+              <a href="#" class=" "><div class="col border rounded-5 m-3 p-2 ">Donate now </div></a>
+            </div>
+        </div>
+
+        <br>
+
+        <div class="bg-white text-black p-5 vh-100 vw-100">
+            <h1 class="m-5 "> WHERE TO FIND US ?</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
+            <br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
+                    width="100%" height="50%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+
+        <div class="vh-60 vw-100 p-5">
+            <h1 class="m-5"> CONTACT US </h1>
+
+            <div class="input-box">
+              <input type="text" placeholder="Prénom"required>
+            </div>
+
+            <div class="input-box">
+              <input type="text" placeholder="Nom" required>
+            </div>
+
+            <div class="input-box">
+              <input type="text-area" placeholder="Votre message" required>
+            </div>
+
+            </div>
+            <button class="btn"> Envoyer</button>
+
+            <br>
+        </div>
+    </main>
+
+    <!-- ========== fin main ========== -->
+    <!-- ========== footer ========== -->
+
+    <footer>
+        <h6>Copyright &copy; 2025 — All rights reserved.</h6>
+        <h6>Designed by
+            <a href="https://www.linkedin.com/in/maxime-madureira/">Maxime MADUREIRA</a>,
+            <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/">Chahe PAPAZIAN</a>,
+            <a href="https://www.linkedin.com/in/brouillac/">Julien BROUILLAC</a>,
+            <a href="https://www.linkedin.com/in/timeo-laubignat/">Timéo LAUBIGNAT.</a>
+        </h6>
+    </footer>
+    <!-- ========== fin footer ========== -->
 </body>
 </html>
