--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -35,17 +35,17 @@
     <!-- ========== main ========== -->
 
     <main>
-        <div class="container">
+        <div class="text-center text-white ">
             <h1 class="mt-5"> ALL LINE-UP</h1>
             <br>
-            <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ms-4 me-4 ">
-                <a href="lineup.html"><div class="col border rounded-5 m-3 p-2">All </div></a>
+            <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ps-5 pe-5">
+                <a href="lineup.html"><div class="col border rounded-5 m-3 p-2 ">All </div></a>
                 <a href="../autres/friday.html"><div class="prog-btn col border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
                 <a href="../autres/saturday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
                 <a href="../autres/sunday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Sunday 3rd </div></a>
             </div>
             <br>
-            <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5">
+            <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 me-5 ms-5 me-5  p-2">
                 <div class="col m-3">
                     <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle border-2 ">
                     <p>1plike Prime</p></a>
@@ -117,19 +117,19 @@
         </div>
         <br>
         <br>
-        <div class="container container-fluid bg-danger vh-100">
-            <div class="container pb-5">
+        <div class=" text-center text-white bg-black p-5 rounded-3 vw-100 wh-100">
+            <div class="  m-5">
                 <h1>SCHEDULE</h1>
             </div>
 
-            <div class="container">
-                <table class="table table-bordered">
+            <div class="m-5">
+                <table class="table table-bordered ">
                     <thead>
                         <tr>
                             <th>TIME</th>
-                            <th>FRIDAY 1</th>
-                            <th>SATURDAY 2</th>
-                            <th>SUNDAY 3</th>
+                            <th>FRI. 1</th>
+                            <th>SAT. 2</th>
+                            <th>SUN. 3</th>
                         </tr>
                     </thead>
                     <tbody>
