--- a/autres/infos.html
+++ b/autres/infos.html
@@ -91,26 +91,32 @@
             </iframe>
         </div>
 
-        <div class="vh-60 vw-100 p-5">
+        <div class=" vh-60 vw-100 p-5">
             <h1 class="m-5"> CONTACT US </h1>
 
             <div class="input-box">
-              <input type="text" placeholder="Prénom"required>
+              <input type="text" placeholder="Prénom" required>
             </div>
 
             <div class="input-box">
               <input type="text" placeholder="Nom" required>
             </div>
 
-            <div class="input-box">
-              <input type="text-area" placeholder="Votre message" required>
-            </div>
+            <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm">
 
-            </div>
             <button class="btn"> Envoyer</button>
-
             <br>
         </div>
+
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+            </div>
+        </div>
+
     </main>
 
     <!-- ========== fin main ========== -->
