--- a/autres/star/1plike140.html
+++ b/autres/star/1plike140.html
@@ -37,7 +37,7 @@
 <main>
     <div class="text-center text-white ">
       <div class=" prog d-flex justify-content-center">
-        <a href="javascript:history.back()" class="w-50 "><div class="col border rounded-5 m-3 pb-1 pt-1  "> BACK </div></>
+        <a href="javascript:history.back()" class="w-50 "><div class="col colx border rounded-5 m-3 pb-1 pt-1  "> BACK </div></a>
       </div>
         <h1 class="mt-5"> 1PLIKE140</h1>
 
