--- a/autres/infos.html
+++ b/autres/infos.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <img src="../assets/img/menu-btn.png" alt="" class="menu-btn">
             <div class="menu-container">
-                <div class="nav-links mb-5">
+                <div class="nav-links">
                     <ul>
                         <li><a href="../index.html">ACCUEIL</a></li>
                         <li><a href="../autres/ticket.html">TICKETS</a></li>
@@ -37,26 +37,26 @@
     <main class="text-center text-white">
         <h1 class="mt-5 mb-5 vh-60 vw-100"> INFORMATIONS</h1>
 
-        <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5vh-60  ">
-            <div class="col m-3">
+        <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 vh-60  ">
+            <div class="col colx m-3">
                 <a href="https://www.linkedin.com/in/brouillac/"> <img src="../assets/img/julien.brouillac.jpg" alt="julien" class="rounded-5 border-2 ">
                   <h2>Julien BROUILLAC</h2>
                 </a>
             </div>
 
-            <div class="col  m-3">
+            <div class="col colx m-3">
                 <a href="https://www.linkedin.com/in/maxime-madureira/"><img src="../assets/img/maxime.madureira.jpg" alt="Maxime" class="rounded-5 border-2 ">
                 <h2>Maxime MADUREIRA</h2>
                 </a>
             </div>
 
-            <div class="col m-3 ">
+            <div class="col colx m-3 ">
                 <a href="https://www.linkedin.com/in/chahe-papazian-7584a3282/"><img src="../assets/img/chahe.papazian.jpg" alt="chahe" class="rounded-5 border-2 ">
                 <h2>Chahé PAPAZIAN</h2>
                 </a>
             </div>
 
-            <div class="col m-3">
+            <div class="col colx m-3">
                 <a href="https://www.linkedin.com/in/timeo-laubignat/"><img src="../assets/img/timéo.gif" alt="timeo" class="rounded-5 border-2 ">
                   <h2>Timéo LAUBIGNAT</h2>
                 </a>
@@ -71,12 +71,14 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, nam nulla odio omnis quidem quos reiciendis! Accusamus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet animi aspernatur beatae consequatur dolorem, doloremque ea est eveniet excepturi harum hic nemo nesciunt obcaecati, omnis quas quidem rem, tenetur voluptate! aliquam aperiam blanditiis dignissimos impedinam nulla, qui quos ratione ut voluptatem voluptatum</p>
         </div>
 
-        <div class="vh-60 vw-100 p-5">
+        <div class="p-5">
             <h1 class="m-5"> FREE PALESTINE !</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, autem cum, dolores doloribus esse fugiat illo illum iste iure labore magni modi provident soluta voluptas voluptatibus voluptatum. Omnis, sapiente!</p>
             <br>
-            <div class="prog container d-flex justify-content-center">
-                <a href="#" class="w-50 "><div class="col border rounded-5 m-3 pb-1 pt-1  "> DONATE NOW </div></a>
+            <div class="prog container d-flex justify-content-center ">
+                <a href="#" class="w-50 text-center">
+                    <div class="col colx border rounded-5 m-3 pb-1 pt-1">DONATE NOW</div>
+                </a>
             </div>
         </div>
 
@@ -87,39 +89,39 @@
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio obcaecati odit porro repellat totam ut velit. Consequatur dolor doloribus fugit molestiae obcaecati praesentium quos saepe voluptas. Ad delectus eius maiores.</p>
             <br>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8937.749873045637!2d10.256122351875076!3d36.75407251487173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd49e2ba870e0f%3A0x5ff3585235a59361!2zRm9yw6p0IGRlIFJhZMOocw!5e0!3m2!1sfr!2sfr!4v1742985606016!5m2!1sfr!2sfr"
-                    width="100%" height="50%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    width="100%" height="50%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="col ">
             </iframe>
         </div>
 
+        <div class="p-5">
+            <h1 class="m-5"> CONTACT US </h1>
+            <div class="row row-cols-1  justify-content-center text-center">
+                <div class="row row-cols-1 row-cols-md-1 justify-content-center text-center">
+                    <div class="col form-group pb-4">
+                        <input type="text" name="firstName" class="form-control w-75 mx-auto" id="firstname" placeholder="Firstname" autocomplete="family-name" required />
+                    </div>
 
-        <div class="  p-5">
-            <div class="row ">
-                <h1 class=""> CONTACT US </h1>
-                <div class=" col col-md-6 form-group pb-4">
-                    <input type="text" name="firstName" class="form-control" id="firstname" placeholder="Your firstname" autocomplete="family-name" required />
+                    <div class="col form-group pb-4">
+                        <input type="text" name="lastName" class="form-control w-75 mx-auto" id="name" placeholder="Name" autocomplete="family-name" required />
+                    </div>
+
+                    <div class="col form-group pb-4">
+                        <input type="email" class="form-control w-75 mx-auto" name="email" id="email" placeholder="Email" autocomplete="email" required />
+                    </div>
+                </div>
+                <div class="col form-group pb-4">
+                    <input type="text" class="form-control w-75 mx-auto" name="subject" id="subject" placeholder="Subject" required />
                 </div>
 
-                <div class=" col col-md-6 form-group pb-4">
-                    <input type="text" name="lastName" class="form-control" id="name" placeholder="Your name" autocomplete="family-name" required />
+                <div class="col form-group pb-4">
+                    <textarea class="form-control w-75 mx-auto" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
 
-            </div>
-
-            <div class=" col form-group pb-4">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your email" autocomplete="email" required />
-            </div>
-
-
-            <div class="col form-group pb-4">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Objet" required />
-            </div>
-
-            <div class="col form-group pb-4">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-            </div>
-
-            <div class="prog container d-flex justify-content-center">
-                <a href="#" class="w-50 "><div class="col border rounded-5 m-3 pb-1 pt-1  "> SEND </div></a>
+                <div class="prog container d-flex justify-content-center w-100">
+                    <a href="#" class="w-50 text-center d-block">
+                        <div class="col colx border rounded-5 m-3 pb-1 pt-1">SUBMIT</div>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
