--- a/autres/lineup.html
+++ b/autres/lineup.html
@@ -39,77 +39,77 @@
             <h1 class="mt-5"> ALL LINE-UP</h1>
             <br>
             <div class="prog row  row-cols-1 row-cols-md-2 row-cols-lg-5 d-flex justify-content-center ps-5 pe-5">
-                <a href="lineup.html"><div class="col border rounded-5 m-3 p-2 ">All </div></a>
-                <a href="../autres/friday.html"><div class="prog-btn col border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
-                <a href="../autres/saturday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
-                <a href="../autres/sunday.html"><div class="prog-btn col border rounded-5 m-3 p-2">Sunday 3rd </div></a>
+                <a href="lineup.html"><div class="col colx border rounded-5 m-3 p-2 ">All </div></a>
+                <a href="../autres/friday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2  ">Friday 1st </div> </a>
+                <a href="../autres/saturday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Saturday 2nd </div> </a>
+                <a href="../autres/sunday.html"><div class="prog-btn col colx border rounded-5 m-3 p-2">Sunday 3rd </div></a>
             </div>
             <br>
             <div class=" row  row-cols-1 row-cols-md-3 row-cols-lg-6 d-flex justify-content-center mt-5 me-5 ms-5 me-5  p-2">
-                <div class="col m-3">
+                <div class="col colx m-3">
                     <a href="./star/1plike140.html"> <img src="../assets/img/1plike140.jpg" alt="1plike140" class="rounded-circle  ">
                     <p>1plike Prime</p></a>
                 </div>
 
-                <div class="col  m-3">
+                <div class="col colx m-3">
                     <a href="./star/1plike140.html"><img src="../assets/img/bart.jpg" alt="El Barto" class="rounded-circle border-2 ">
                     <p>El Barto</p></a>
                 </div>
 
-                <div class="col m-3 ">
+                <div class="col colx m-3 ">
                     <a href="./star/1plike140.html"><img src="../assets/img/Leonide.jpg" alt="Jerry Léonide" class="rounded-circle border-2 ">
                     <p>Mr. Léonide</p></a>
                 </div>
 
-                <div class="col m-3 ">
+                <div class="col colx m-3 ">
                     <a href="./star/1plike140.html"><img src="../assets/img/julien.png" alt="julien Naty" class="rounded-circle border-2 ">
                     <p>Julien Naty</p></a>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/gattouz.png" alt="gattouz" class="rounded-circle border-2 ">
                     <p>Gattouz</p>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/pims.jpg" alt="pims" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/pims.jpg" alt="pims" class="rounded-circle border-2 ">
                     <p>Maitre Pim's</p>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/pnl.jpg" alt="pnl" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/pnl.jpg" alt="pnl" class="rounded-circle border-2 ">
                     <p>PNL</p>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
                     <p>Asap Rocky</p>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
                     <p>El Dictator</p>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
                     <p>Killer Bee</p>
                 </div>
 
-                <div class="col m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
+                <div class="col colx m-3"><img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
                     <p>El Dictator</p>
                 </div>
 
-                <div class="col m-3">
+                <div class="col colx m-3">
                     <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
                     <p>Asap Rocky</p>
                 </div>
 
-                <div class="col m-3">
+                <div class="col colx m-3">
                     <img src="../assets/img/asap-rocky.jpg" alt="ASAP" class="rounded-circle border-2 ">
                     <p>Asap Rocky</p>
                 </div>
 
-                <div class="col m-3">
+                <div class="col colx m-3">
                     <img src="../assets/img/macaron.png" alt="macaron" class="rounded-circle border-2 ">
                     <p>El Dictator</p>
                 </div>
 
-                <div class="col m-3">
+                <div class="col colx m-3">
                     <img src="../assets/img/bee.gif" alt="bee" class="rounded-circle border-2 ">
                     <p>Killer Bee</p>
                 </div>
